added account info page

--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -203,7 +203,9 @@ Sidebar / layout
 /* ul */
 .sidebar-links {
 }
-
+.nav-text {
+  cursor: pointer;
+}
 .nav-text a {
   display: flex;
   align-items: flex-start;
