--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -38,7 +38,14 @@ Variables
   --large-screen-width: 1170px;
   --small-screen-width: 90vw;
   --fixed-width: 50rem;
+  --accent-color: rgb(204, 0, 0);
+  --lightest-gray: rgb(244, 244, 244);
+  --light-gray: rgb(144, 144, 144);
+  --medium-gray: rgb(96, 96, 96);
+  --dark-gray: rgb(13, 13, 13);
   --header-height: 40px;
+  --animation-duration: 200ms;
+  --animation-timing-curve: ease-in-out;
 }
 * {
   margin: 0;
@@ -160,6 +167,7 @@ Sidebar (handles layout with children as main content on page)s
 
 .page-layout {
   display: flex;
+  overflow: hidden;
 }
 .page-header {
   display: flex;
@@ -170,6 +178,8 @@ Sidebar (handles layout with children as main content on page)s
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.4);
   padding: 0 0.5rem;
   height: var(--header-height);
+}
+.header-user-info {
 }
 
 .main-content {
@@ -197,12 +207,13 @@ Sidebar (handles layout with children as main content on page)s
 }
 
 .sidebar {
-  height: 100vh;
+  height: auto;
   width: 240px; /* 0 width - change this with JavaScript */
-  /* position: sticky; Stay in place */
+  /* position: absolute; */
   top: 0;
   left: 0;
-  background-color: #e7e8e9; /* Black*/
+  border-right: 1px solid black;
+  background-color: black; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   /* Place content 60px from the top */
   transition: 0.7s ease-in-out; /* 0.5 second transition effect to slide in the sidebar */
@@ -215,6 +226,11 @@ Sidebar (handles layout with children as main content on page)s
   padding-top: 45px;
 }
 .nav-listitem {
+  /* fill: var(--accent-color); */
+  background-color: black;
+}
+.nav-listitem:hover {
+  background-color: var(--clr-grey-1);
 }
 
 .sidebar-link {
@@ -227,11 +243,13 @@ Sidebar (handles layout with children as main content on page)s
   padding-left: 25px;
 }
 
-.sidebar-link-icon {
+.nav-listitem:hover .sidebar-link-title {
+  color: white;
 }
 
 .sidebar-link-title {
 }
+
 /*-------- sidebar collapsed -------*/
 .sidebar-collapsed {
   height: 100vh; /* cant use 100% Full-height, because root div has no styling for height */
