--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -386,13 +386,18 @@ Home page
 */
 .home-header {
   display: flex;
+  /* align-content: center; */
   align-items: center;
+  /* justify-content: center; */
   /* position: sticky; */
   top: 0;
   background-color: black;
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.4);
   padding: 0 0.5rem;
   height: 5vh;
+}
+.home-header span {
+  color: white;
 }
 .home-h1 {
   text-align: center;
