--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -141,6 +141,10 @@ th,
 td {
   border: 1px solid black;
 }
+
+td {
+  text-align: center;
+}
 ul {
   list-style-type: none;
 }
@@ -232,7 +236,7 @@ Sidebar (handles layout with children as main content on page)s
   background-color: black; /* Black*/
   overflow: hidden; /* Disable horizontal scroll */
   /* Place content 60px from the top */
-  transition: 0.7s ease-in-out; /* 0.5 second transition effect to slide in the sidebar */
+  /* transition: 0.7s ease-in-out;  */
   text-align: center;
   flex-shrink: 0;
   display: flex;
@@ -266,15 +270,19 @@ Sidebar (handles layout with children as main content on page)s
 
 .sidebar-link-title {
   font-size: 1.1rem;
+  transition: 0.7s ease-out;
 }
 .sidebar-link-icon {
-  font-size: 1.1rem;
+  font-size: 1.6rem;
 }
 
 /*-------- sidebar collapsed -------*/
 
 .sidebar.collapsed {
   width: 75px;
+}
+.sidebar.collapsed .sidebar-link-title {
+  display: none;
 }
 /*
 ===============
@@ -364,7 +372,7 @@ Customer Manager
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 75%; /* Could be more or less, depending on screen size */
 }
 
 .modal-close {
@@ -685,3 +693,57 @@ Items List
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
+/*
+===============
+Administration page
+===============
+*/
+.administration-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.administration-container h1 {
+  text-align: center;
+}
+
+.administration-container .btn {
+  width: 35%;
+}
+
+.product-manager-container {
+  border: 1px solid black;
+  height: max-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.product-manager-container div {
+  text-align: center;
+  /* text-decoration: underline solid black;
+  text-underline-offset: 0.1em; */
+  border: 1px solid black;
+  height: 20vh;
+  width: 20vw;
+  margin: 1em;
+  /* padding: 0.5em; */
+  display: flex;
+  flex-direction: column;
+  /* overflow-x: hidden;
+  overflow-y: scroll; */
+}
+
+/* .product-manager-container div table {
+  justify-content: center;
+} */
+
+/*
+===============
+Administation page
+===============
+*/
