--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -85,9 +85,9 @@ h3 {
 h4 {
   font-size: 0.875rem;
 }
-/* p {
+p {
   margin-bottom: 1.25rem;
-} */
+}
 /* @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
@@ -175,8 +175,8 @@ LAYOUT
     'header header'
     'sidebar main';
   gap: 0px 0px;
-  grid-template-rows: 11fr 1fr;
-  grid-template-columns: 1fr 11fr;
+  grid-template-rows: max-content 11fr;
+  grid-template-columns: max-content 11fr;
 }
 .main-content {
   /* min-height: max-content; */
@@ -339,7 +339,7 @@ Account info
   flex-direction: column;
 }
 .accInfotable {
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 /*
@@ -749,11 +749,12 @@ Administration page
 ===============
 */
 .administration-container {
-  width: 100%;
-  position: relative;
+  /* width: 100%; */
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   justify-items: center;
+  grid-area: main;
 }
 
 .administration-container h1 {
