--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -890,3 +890,38 @@ Orderform senderFormAdmin
 Orderform senderFormAdmin
 ===============
 */
+
+#kitchenSinkTableContainer {
+  padding: 1rem;
+}
+
+#kitchenSinkTableContainer > table {
+  border-spacing: 0;
+  border: 1px solid black;
+}
+#kitchenSinkTableContainer > table > tr:last-child > td {
+  border-bottom: 0;
+}
+
+#kitchenSinkTableContainer > table > th,
+#kitchenSinkTableContainer > table > td {
+  margin: 0;
+  padding: 0.5rem;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+#kitchenSinkTableContainer > table > th:last-child,
+#kitchenSinkTableContainer > table > td:last-child {
+  border-right: 0;
+}
+#kitchenSinkTableContainer > table > td > input {
+  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+#kitchenSinkTableContainer > table > .pagination {
+  padding: 0.5rem;
+}
