udpated account page sharing customer page code

--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -925,3 +925,15 @@ Orderform senderFormAdmin
 #kitchenSinkTableContainer > table > .pagination {
   padding: 0.5rem;
 }
+
+/*
+===============
+warehouse page
+===============
+*/
+
+/*
+===============
+warehouse page
+===============
+*/
