--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -50,8 +50,8 @@ body {
   height: 100vh;
 }
 body {
-  font-family: 'Noto sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Noto sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* background: var(--clr-grey-10); */
   /* color: var(--clr-grey-1); */
   line-height: 1.5;
@@ -169,6 +169,7 @@ table,
 th,
 td {
   border: 1px solid black;
+  border-collapse: collapse;
 }
 
 td {
