--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -50,8 +50,8 @@ body {
   height: 100vh;
 }
 body {
-  font-family: 'Noto sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Noto sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   /* background: var(--clr-grey-10); */
   /* color: var(--clr-grey-1); */
   line-height: 1.5;
@@ -471,11 +471,31 @@ Home page
 */
 .home-container {
   height: 100vh;
-  background-color: hsl(34, 75%, 45%);
+  background-color: white;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 16em;
 }
+.home-container h1 {
+  text-align: center;
+  height: 10vh;
+  width: 25ch;
+  margin: 0;
+  /* background-color: rgb(159, 19, 19); */
+  color: black;
+  text-decoration-line: underline;
+}
+
+.signin-form {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  justify-content: center;
+  align-items: center;
+}
+
 .home-header {
   display: flex;
   /* align-content: center; */
@@ -491,11 +511,7 @@ Home page
 .home-header span {
   color: white;
 }
-.home-h1 {
-  text-align: center;
-  height: 10vh;
-  margin: 0;
-}
+
 .home-no-session {
   display: flex;
   align-content: center;
@@ -568,11 +584,6 @@ input[type='password'] {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-.signin-form {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
 }
 
 .test {
