--- a/courier/styles/globals.css
+++ b/courier/styles/globals.css
@@ -476,7 +476,7 @@ Home page
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
-  gap: 16em;
+  /* gap: 16em; */
 }
 .home-container h1 {
   text-align: center;
