--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.formik-input-container {
+  @apply flex flex-col;
+}
+.formik-input-container input {
+  @apply border border-black py-2 px-2 w-full;
+}
+
+.form-error {
+  @apply text-red-600;
+}
+
+.btn {
+  @apply font-bold py-2 px-2 rounded;
+}
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
