--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -2,10 +2,79 @@
 @tailwind components;
 @tailwind utilities;
 
-/* 
-* {
+/* * {
   outline: 1px solid #f00 !important;
+} */
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
 }
+
+h1 {
+  @apply mb-4 mt-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl;
+}
+
+/*
+================
+MODAL HOC
+================
+*/
+
+.d-block {
+  display: block;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.d-none {
+  display: none;
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+.modal-container {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 75%; /* Could be more or less, depending on screen size */
+}
+
+.modal-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.modal-close:hover,
+.mdoal-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+/*
+================
+MODAL HOC
+================
 */
 
 .formik-input-container {
@@ -24,7 +93,7 @@
   @apply font-bold py-2 px-2 rounded;
 }
 .btn-blue {
-  @apply bg-blue-500 text-white;
+  @apply bg-blue-500 text-white active:bg-blue-700;
 }
 .btn-blue:hover {
   @apply bg-blue-700;
