--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -14,7 +14,7 @@ td {
 }
 
 h1 {
-  @apply mb-4 mt-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl;
+  @apply mb-4 mt-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl text-center;
 }
 
 /*
