--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-  outline: 1px solid #f00 !important;
-} */
+/* * { */
+/*   outline: 1px solid #f00 !important; */
+/* } */
 
 table,
 th,
