--- a/courier-t3/src/styles/globals.css
+++ b/courier-t3/src/styles/globals.css
@@ -17,6 +17,10 @@ h1 {
   @apply mb-4 mt-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl text-center;
 }
 
+/* h2 { */
+/*   @apply */
+/* } */
+
 /*
 ================
 MODAL HOC
